"Graphical improvements and updated experience/certifications."

--- a/examples/resume/languages.tex
+++ b/examples/resume/languages.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 %\cvsectionspecifiedcolor{rainbowcolor-violet}{\faGlobe \acvHeaderIconSep Languages}
-\cvsectionspecifiedcolor{rainbowcolor-red}{\faGlobe \acvHeaderIconSep Languages}
+\cvsectionspecifiedcolor{awesome-red}{\faGlobe \acvHeaderIconSep Languages}
 
 
 %-------------------------------------------------------------------------------
