--- a/examples/resume/research_interests.tex
+++ b/examples/resume/research_interests.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 %\cvsectionspecifiedcolor{rainbowcolor-orange}{\faGears \acvHeaderIconSep Research Interests}
-\cvsectionspecifiedcolor{rainbowcolor-red}{\faGears \acvHeaderIconSep Areas of Interest}
+\cvsectionspecifiedcolor{awesome-red}{\faGears \acvHeaderIconSep Areas of Interest}
 
 
 %-------------------------------------------------------------------------------
