--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 %\cvsectionspecifiedcolor{rainbowcolor-yellow}{\faBarChart \acvHeaderIconSep Skills}
-\cvsectionspecifiedcolor{rainbowcolor-red}{\faBarChart \acvHeaderIconSep Skills}
+\cvsectionspecifiedcolor{awesome-red}{\faBarChart \acvHeaderIconSep Skills}
 
 
 %-------------------------------------------------------------------------------
@@ -24,44 +24,41 @@
 
 \begin{cventries}
 
+\vspace{-0.25cm}
+
 %---------------------------------------------------------
   \cventry
     {Programming/meta Languages \& APIs/Frameworks:} % title
     {} % 
     {} % 
     {} % 
-    {     
+    {
+      \vspace{0.1cm}     
       \begin{cvitems} % Description(s)
-        \item {
-        C/C++\ref{4}{$^{[4]}$}, 
-        %C\#\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        C\#\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}, 
-        %Java\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
-        Java\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}, 
-        %shell scripting\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
-        shell scripting\ref{4}{$^{[4]}$}, 
-		%PL/-SQL\ref{9}{$^{[9]}$},        
-        PL/SQL\ref{5}{$^{[5]}$}, 
-        %T-SQL\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        T-SQL\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$},  
-        %jQuery/Ajax/JSON/Bootstrap\ref{9}{$^{[9]}$},
-        JSP/jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},          
-        %Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
-        Angular %2/4 
-        \& Node.js\ref{5}{$^{[5]}$},
-        Apache Struts\ref{5}{$^{[5]}$},
-        OpenGL\ref{4}{$^{[4]}$},      
-        CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$},
-        %HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
-        HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{6}{$^{[6]}$}, 
-        UML\ref{2}{$^{[2]}$},
-        LaTeX\ref{4}{$^{[4]}$}%,
-        %\textbf{Prolog}\ref{2}{$^{[2]}$},
-		%\textbf{OCaml}\ref{2}{$^{[2]}$},
-		.}
+        \item[] {
+		\textcolor{rainbowcolor-indigo}{C/C++\ref{4}{$^{[4]}$}},
+		\textcolor{rainbowcolor-indigo}{C\#\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
+		\textcolor{rainbowcolor-indigo}{Java\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
+		\textcolor{rainbowcolor-indigo}{ASP Classic\ref{5}{$^{[5]}$}},
+		\textcolor{rainbowcolor-indigo}{Prolog\ref{2}{$^{[2]}$}},
+		\textcolor{rainbowcolor-indigo}{OCaml\ref{2}{$^{[2]}$}},
+		\textcolor{rainbowcolor-indigo}{shell scripting\ref{4}{$^{[4]}$}},
+		\textcolor{rainbowcolor-indigo}{PL/SQL\ref{5}{$^{[5]}$}},
+		\textcolor{rainbowcolor-indigo}{T-SQL\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
+		\textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$}},
+		\textcolor{rainbowcolor-indigo}{Angular %2/4 
+	    	\& Node.js\ref{5}{$^{[5]}$}},
+	    \textcolor{rainbowcolor-indigo}{Apache Struts\ref{5}{$^{[5]}$}},
+	    \textcolor{rainbowcolor-indigo}{OpenGL\ref{4}{$^{[4]}$}},
+	    \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}},
+	    \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{6}{$^{[6]}$}},
+	    \textcolor{rainbowcolor-indigo}{UML\ref{2}{$^{[2]}$}},
+	    \textcolor{rainbowcolor-indigo}{LaTeX\ref{4}{$^{[4]}$}}.%,
+	    %\textcolor{rainbowcolor-indigo}{Beamer\ref{4}{$^{[4]}$}}.
+	    }
 	  \end{cvitems}
     }  
-  \vspace{-0.4cm}
+  %\vspace{-0.4cm}
 
 %---------------------------------------------------------
   \cventry
@@ -70,57 +67,56 @@
     {} % Location
     {} % Date(s)
     {
+      \vspace{0.1cm}
       \begin{cvitems} % Description(s) 
-        \item {        
-        %Team Foundation Server\ref{9}{$^{[9]}$},
-        Azure DevOps\ref{5}{$^{[5]}$},         
-        Team Foundation Server (TFS)\ref{6}{$^{[6]}$},
-        Zendesk\ref{5}{$^{[5]}$},
-        Redmine\ref{5}{$^{[5]}$},  
-		%Git\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$},         
-        Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
-        %SVN\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
-        Apache Maven\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
-        %Maven\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
-        %Ant\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
-        Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},  
-        Apache Tomcat\ref{5}{$^{[5]}$},  
-        %\textbf{LibreOffice}\ref{8}{$^{[8]}$}, 
-        Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$},  
-        %Netbeans\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        Netbeans\ref{4}{$^{[4]}$}, 
-        Oracle SQL developer\ref{5}{$^{[5]}$},
-        %JMonkeyEngine\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
-        %Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
-        Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
-        %Visual Studio Code\ref{9}{$^{[9]}$}, 
-        Visual Studio Code\ref{5}{$^{[5]}$},
-        %MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
-        MS Office Suite\ref{6}{$^{[6]}$},
-        %Google Chrome\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
-        %Skype\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
-        Skype for Business\ref{5}{$^{[5]}$},
-        WebEx\ref{5}{$^{[5]}$},
-        Google Chrome\ref{6}{$^{[6]}$},        
-        Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
-        SoapUI\ref{5}{$^{[5]}$},
-        Postman\ref{5}{$^{[5]}$},
-        Swagger\ref{5}{$^{[5]}$},        
+        \item[] {        
+        \textcolor{rainbowcolor-green}{Azure DevOps\ref{5}{$^{[5]}$}},         
+        \textcolor{rainbowcolor-green}{Team Foundation Server (TFS)\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-green}{Zendesk\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{Redmine\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-green}{Slack\ref{5}{$^{[5]}$}}, 
+        \textcolor{rainbowcolor-green}{Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}}, 
+        \textcolor{rainbowcolor-green}{SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{Apache Maven\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},  
+        \textcolor{rainbowcolor-green}{Apache Tomcat\ref{5}{$^{[5]}$}}, 
+        %\textcolor{rainbowcolor-green}{Blender\ref{2}{$^{[2]}$}}, 
+        %\textcolor{rainbowcolor-green}{JMonkeyEngine\ref{2}{$^{[2]}$}}, 
+        \textcolor{rainbowcolor-green}{LibreOffice\ref{4}{$^{[4]}$}}, 
+        \textcolor{rainbowcolor-green}{Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}},  
+        \textcolor{rainbowcolor-green}{Netbeans\ref{4}{$^{[4]}$}}, 
+        \textcolor{rainbowcolor-green}{Oracle SQL developer\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-green}{Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{Visual Studio Code\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{MS Office Suite\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-green}{MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
+		%\textcolor{rainbowcolor-green}{SSRS/SSIS/SSAS\ref{5}{$^{[5]}$}},
+		\textcolor{rainbowcolor-green}{PowerBI\ref{5}{$^{[5]}$}}, 
+        \textcolor{rainbowcolor-green}{Skype/Skype for Business\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-green}{WebEx\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{Google Chrome\ref{6}{$^{[6]}$}},                
+        \textcolor{rainbowcolor-green}{Internet Explorer\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-green}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{SoapUI\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{Postman\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-green}{Swagger\ref{5}{$^{[5]}$}},        
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
         %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
         %\textbf{Slack}\ref{5}{$^{[5]}$}
         %\textbf{UmbreloUML}\ref{2}{$^{[2]}$},
         %\textbf{Omnet++}\ref{2}{$^{[2]}$},
-        %\textbf{Blender}, 
         %\textbf{Android Studio},
-        %Texmaker \& JabRef\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}%,
-        .}       
+        %\textcolor{rainbowcolor-green}{Texmaker \& JabRef\ref{4}{$^{[4]}$}}, 
+        \textcolor{rainbowcolor-green}{IIS 6-8\ref{5}{$^{[5]}$}}.%,
+        %\textcolor{rainbowcolor-green}{VNC\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-green}{mRemote\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-green}{Cisco AnyConnect\ref{5}{$^{[5]}$}}, %Cisco VPN client, 
+		%\textcolor{rainbowcolor-green}{FortiClient\ref{5}{$^{[5]}$}}.
+		}
       \end{cvitems}
     }  
-  \vspace{-0.4cm}  
+  %\vspace{-0.4cm}  
     
 %---------------------------------------------------------
 %  \cventry
@@ -155,14 +151,14 @@
     {} 
     {} 
     {
+      \vspace{0.1cm}
       \begin{cvitems} % Description(s)
-        \item {
-        MS Windows 2003-2016 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}, 
-        Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}, 
-        %Android\ref{8}{$^{[8]}$}, 
-        %iOS\ref{6}{$^{[6]}$},
-        CiscoIOS\ref{5}{$^{[5]}$}%,
-        .} 
+        \item[] {
+        \textcolor{rainbowcolor-orange}{MS Windows 2003-2016 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}}, 
+        \textcolor{rainbowcolor-orange}{Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}},
+        %Android\ref{8}{$^{[8]}$} 
+        %iOS\ref{6}{$^{[6]}$}
+        \textcolor{rainbowcolor-orange}{CiscoIOS\ref{5}{$^{[5]}$}}.} 
       \end{cvitems}
     }  
   \vspace{-0.6cm} 
