--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -1,6 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
+%\cvsectionspecifiedcolor{rainbowcolor-red}{\faGears \acvHeaderIconSep Summary}
 \cvsectionspecifiedcolor{rainbowcolor-red}{\faUser \acvHeaderIconSep Summary}
 
 
