--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -46,6 +46,7 @@
 % If you would like to change the social information separator from a pipe (|) to something else
 \renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad}
 
+\usepackage{xcolor}
 
 %-------------------------------------------------------------------------------
 %	PERSONAL INFORMATION
