--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -2,29 +2,46 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 %\cvsectionspecifiedcolor{rainbowcolor-blue}{\faCertificate \acvHeaderIconSep Certifications}
-\cvsectionspecifiedcolor{rainbowcolor-red}{\faCertificate \acvHeaderIconSep Certifications}
-
+\cvsectionspecifiedcolor{awesome-red}{\faCertificate \acvHeaderIconSep Certifications}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+\vspace{-0.25cm}
+
+%---------------------------------------------------------
+  \cventry
+    {Build Mobile Applications with SAP Cloud Platform Mobile Services (227.8/300)} % Certificate designation
+    {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+    %{Online} % Location
+    {} % Location
+    %{June 13, 2018 - July 26, 2018} % Date(s)      
+    {Aug. 2019 - Oct. 2019} % Date(s)          
+    {
+	    \begin{cvitems} % Description(s) of tasks/responsibilities  
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xicav-sakyr-fopyh-kyfal-tunah}} %Certificate URL 
+        \item[] {Valid from October 2, 2019 - Present} % Validity
+      \end{cvitems}
+    }
+    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {Object-Oriented Programming in Java (188.0/200)} % Certificate designation
-    {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+    {} % Certifacion entity
     %{Online} % Location
     {} % Location
     %{June 13, 2018 - July 26, 2018} % Date(s)      
     {June 2018 - July 2018} % Date(s)          
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities  
-        \item {Online Certificate: \url{https://open.sap.com/verify/xocis-tyvip-gynuh-byneg-punel}} %Certificate URL 
-        \item {Valid from July 25, 2018 - Present} % Validity
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xocis-tyvip-gynuh-byneg-punel}} %Certificate URL 
+        \item[] {Valid from July 25, 2018 - Present} % Validity
       \end{cvitems}
     }   
-    
+    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {Cloud-Native Development with SAP Cloud Platform* (249.1/360)} % Certificate designation
@@ -36,11 +53,11 @@
     {Apr. 2018 - May 2018} % Date(s)          
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities     
-        \item {Online Certificate: \url{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}} %Certificate URL 
-        \item {Valid from May 30, 2018 - Present} % Validity
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}} %Certificate URL 
+        \item[] {Valid from May 30, 2018 - Present} % Validity
       \end{cvitems}
     }   
-
+    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {Design Your First App with Build* (230.0/240)} % Certificate designation
@@ -52,27 +69,27 @@
     {Oct. 2017 - Nov. 2017} % Date(s)      
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities    
-        \item {Online Certificate: \url{https://open.sap.com/verify/xoban-setyz-vogaf-leryz-lufor}} %Certificate URL 
-        \item {Valid from Nov. 9, 2017 - Present} % Validity
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xoban-setyz-vogaf-leryz-lufor}} %Certificate URL 
+        \item[] {Valid from Nov. 9, 2017 - Present} % Validity
       \end{cvitems}
     }      
-	  
+    \vspace{-0.1cm}
 %---------------------------------------------------------
-%  \cventry
-%    {Be Visual! Sketching Basics for IT Business (70.7/80)} % Certificate designation
-%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-%    {} % Certifacion entity
-%    %{Online} % Location
-%    {} % Location
-%    %{Sep. 6, 2017 - Oct. 12, 2017} % Date(s)      
-%    {Sep. 2017 - Oct. 2017} % Date(s)          
-%    {
-%	    \begin{cvitems} % Description(s) of tasks/responsibilities   
-%        \item {Online Certificate: \url{https://open.sap.com/verify/xuhos-fogot-hytyc-pybin-helen}} %Certificate URL 
-%        \item {Valid from Oct. 12, 2017 - Present} % Validity
-%      \end{cvitems}
-%    }      
-	  
+  \cventry
+    {Be Visual! Sketching Basics for IT Business (70.7/80)} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+    {} % Certifacion entity
+    %{Online} % Location
+    {} % Location
+    %{Sep. 6, 2017 - Oct. 12, 2017} % Date(s)      
+    {Sep. 2017 - Oct. 2017} % Date(s)          
+    {
+	    \begin{cvitems} % Description(s) of tasks/responsibilities   
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xuhos-fogot-hytyc-pybin-helen}} %Certificate URL 
+        \item[] {Valid from Oct. 12, 2017 - Present} % Validity
+      \end{cvitems}
+    }      
+    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {Developing Java-Based Apps on SAP Cloud Platform* (234.3/300)} % Certificate designation
@@ -84,11 +101,11 @@
     {Apr. 2017 - May 2017} % Date(s)      
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities    
-        \item {Online Certificate: \url{https://open.sap.com/verify/xuhes-rimus-bikon-roper-hicom}} %Certificate URL 
-        \item {Valid from May 18, 2017 - Present} % Validity
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xuhes-rimus-bikon-roper-hicom}} %Certificate URL 
+        \item[] {Valid from May 18, 2017 - Present} % Validity
       \end{cvitems}
     }    
-
+    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {SAP HANA Cloud Platform* Essentials (300/360)} % Certificate designation
@@ -100,11 +117,11 @@
     {Feb. 2017 - Mar. 2017} % Date(s)      
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities   
-        \item {Online Certificate: \url{https://open.sap.com/verify/xulor-nynoz-soped-muvuv-zitek}} %Certificate URL 
-        \item {Valid from March 29, 2017 - Present} % Validity
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xulor-nynoz-soped-muvuv-zitek}} %Certificate URL 
+        \item[] {Valid from March 29, 2017 - Present} % Validity
       \end{cvitems}
     }        
-    
+    \vspace{-0.1cm}
 %---------------------------------------------------------  
   \cventry
     {Extending SAP S/4HANA with SAP HANA Cloud Platform* (254.0/360)} % Certificate designation
@@ -116,11 +133,10 @@
     {Jan. 2017 - Mar. 2017} % Date(s)      
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities  
-        \item {Online Certificate: \url{https://open.sap.com/verify/xugal-vaseb-firih-zadyd-deniv}} %Certificate URL 
-        \item {Valid from Feb. 28, 2017 - Present} % Validity
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xugal-vaseb-firih-zadyd-deniv}} %Certificate URL 
+        \item[] {Valid from Feb. 28, 2017 - Present} % Validity
       \end{cvitems}
     }
-   
 %--------------------------------------------------------- 
   \cventry
     {CCNA Routing and Switching: Introduction to networks} % Certificate designation
@@ -129,7 +145,7 @@
     {Oct. 2013 - Jan. 2014} % Date(s)       
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities  
-        \item {Valid from Jan. 2014 - Present} % Validity
+        \item[] {Valid from Jan. 2014 - Present} % Validity
       \end{cvitems}
     }
 
