--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -46,8 +46,6 @@
 % If you would like to change the social information separator from a pipe (|) to something else
 \renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad}
 
-\usepackage{xcolor}
-
 %-------------------------------------------------------------------------------
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
@@ -73,12 +71,14 @@
 \github{g-amador}
 %\bitbucket{g-amador}
 %\stackoverflow{SO-id}{SO-name}
+%\orcid{0000-0001-5798-2701} %No icon not working yet
 %\researchgate{Goncalo\_Amador} %No icon not working yet
 \linkedin{g-amador}
 %\twitter{@twit}
 %\skype{gnpa\_skype}
 %\reddit{reddit-id}
-%\extrainfo{extra informations} 
+%\extrainfo{extra-info} 
+%\extrainfo{\textcolor{orcidcolor}{Orcid Id}: 0000-0001-5798-2701} 
 
 \quote{"First, solve the problem. Then, write the code." John Johnson}
 
