--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -67,75 +67,46 @@
     {Software Consultant} % Job title
     {\href{https://www.reditpro.com/}{RedIT} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {Oct. 2017 - Jan. 2018} % Date(s)
+    {Jul. 2017 - Jan. 2018} 
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 		\item[] {\textbf{Context:} 
-Adaptive software development and integration with Model-Based architecture for an energy sector company %(cannot disclose from which due to confidentiality agreement terms)
-.}
-		\item[] {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. PL-SQL database replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Slack}, \textcolor{rainbowcolor-green}{Git}, \textcolor{rainbowcolor-green}{Visual Studio 2017}, \textcolor{rainbowcolor-green}{MS SQL-server 2016}, \textcolor{rainbowcolor-green}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{JavaScript}, \textcolor{rainbowcolor-orange}{Windows 7}.}
-      \end{cvitems}
-    } 
-    
-%---------------------------------------------------------
-  \cventry
-    {Software Consultant} % Job title
-    {} % Organization
-    {} % Location
-    {Aug. 2017 - Sept. 2018} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities      
-%        \item[] {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
-%%        \item[] {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-%        \item[] {Development and bug suTFS, Account Management, teacherpport for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-%        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
-		\item[] {\textbf{Context:} 
+Adaptive software development and integration with Model-Based architecture for an energy sector company. %(cannot disclose from which due to confidentiality agreement terms).
+Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health, %(cannot disclose from which due to confidentiality agreement terms)
+lets refer to it as X. Perfective and corrective software maintenance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.
 Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health %(cannot disclose from which due to confidentiality agreement terms)
 , lets refer to it as X.}
-		\item[] {\textbf{Functions:} Extension and maintenance of all Model-View-Controller (MVC) functionalities, including models, views, controllers, and SQL scripts to update and include new functionalities on X database. Functional and aesthetic bug resolution in views, controllers, and models of X.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{TFS}, \textcolor{rainbowcolor-green}{MS SQL-server 2014}, \textcolor{rainbowcolor-green}{Visual Studio 2013}, \textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-orange}{Windows 7}.}
+		\item[] {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. PL-SQL database replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.
+		Extension and maintenance of all Model-View-Controller (MVC) functionalities, including models, views, controllers, and SQL scripts to update and include new functionalities on X database. Functional and aesthetic bug resolution in views, controllers, and models of X.
+		Study of Azure AD usage scenarios. Assessment on how to integrate (at the time) Y login process with Azure AD.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Azure AD}, \textcolor{rainbowcolor-green}{Slack}, \textcolor{rainbowcolor-green}{TFS}, \textcolor{rainbowcolor-green}{Git}, \textcolor{rainbowcolor-green}{Visual Studio 2013 \& 2017}, \textcolor{rainbowcolor-green}{Visual Studio Code}, \textcolor{rainbowcolor-green}{MS SQL-server 2014 \& 2016}, \textcolor{rainbowcolor-green}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Angular2/4}, \textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap}, \textcolor{rainbowcolor-indigo}{Node.js}, \textcolor{rainbowcolor-indigo}{JavaScript}, \textcolor{rainbowcolor-orange}{Windows 7}.}	
       \end{cvitems}
     } 
     
 %---------------------------------------------------------
   \cventry
-    {Software Consultant} % Job title
-    {} % Organization
-    {} % Location
-    {July 2017} % Date(s)
+    {PhD Researcher for <\href{http://www.fct.pt/index.phtml.en}{Foundation for Science and Technology}>} % Job title
+    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
+    {Covilh\~a, Portugal} % Location
+    {Jan. 2012 - Present} % Date(s)
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities  
-		\item[] {\textbf{Context:} Perfective and corrective software maintenance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.}
-		\item[] {\textbf{Functions:} Study of Azure AD usage scenarios. Assessment on how to integrate (at the time) Y login process with Azure AD.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Azure AD}, \textcolor{rainbowcolor-green}{Git},  \textcolor{rainbowcolor-green}{MS SQL-server 2016}, \textcolor{rainbowcolor-green}{Visual Studio 2017}, \textcolor{rainbowcolor-green}{Visual Studio Code}, \textcolor{rainbowcolor-indigo}{Angular2/4}, \textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap}, \textcolor{rainbowcolor-indigo}{Node.js}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-orange}{Windows 7}.}
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+      %\item[] {Engineering and design of a novel modular game engine architecture.}
+      \item[] {Implementation and development of novel pathfinders reactive to influence maps.}%a novel pathfinder and of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
+      %\item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
+      %\item[] {Lecturing about achieved results and possible new research trends.}
+      \item[] {Conducting research, writing scientific papers, and lecturing about achieved results and possible new research trends.}
+%        \item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
+%        \item[] {Engineering and design of modular game engines.}
+%        \item[] {Implementation and development of innovative motion planning techniques.}
+%        \item[] {Lecturing about achieved results and possible new research trends.}
+%        \item[] {}
+%        \item[] {\textbf{Notable Accomplishments:}}      
+%        \item[] {Proposal of a novel modular game engine architecture.}
+%        \item[] {Proposal of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
+%        \item[] {Proposal of a novel pathfinder.}
       \end{cvitems}
-    }   
-
-%%---------------------------------------------------------
-%  \cventry
-%    {PhD Researcher for <\href{http://www.fct.pt/index.phtml.en}{Foundation for Science and Technology}>} % Job title
-%    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
-%    {Covilh\~a, Portugal} % Location
-%    {Jan. 2012 - Present} % Date(s)
-%    {
-%      \begin{cvitems} % Description(s) of tasks/responsibilities
-%      %\item[] {Engineering and design of a novel modular game engine architecture.}
-%      \item[] {Implementation and development of novel pathfinders reactive to influence maps.}%a novel pathfinder and of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
-%      %\item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
-%      %\item[] {Lecturing about achieved results and possible new research trends.}
-%      \item[] {Conducting research, writing scientific papers, and lecturing about achieved results and possible new research trends.}
-%%        \item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
-%%        \item[] {Engineering and design of modular game engines.}
-%%        \item[] {Implementation and development of innovative motion planning techniques.}
-%%        \item[] {Lecturing about achieved results and possible new research trends.}
-%%        \item[] {}
-%%        \item[] {\textbf{Notable Accomplishments:}}      
-%%        \item[] {Proposal of a novel modular game engine architecture.}
-%%        \item[] {Proposal of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
-%%        \item[] {Proposal of a novel pathfinder.}
-%      \end{cvitems}
-%    }  
+    }  
     
 %---------------------------------------------------------
   \cventry
