--- a/examples/resume/research_interests.tex
+++ b/examples/resume/research_interests.tex
@@ -21,9 +21,6 @@
 	  \vspace{-1.7cm}
       \begin{multicols}{2}
       \begin{cvitems}
-%        \item {Multi-touch technologies.}
-%        \item {Gesture recognition.}      
-%        \item {Voice/Camera-based Human-Computer Interaction (HCI).}
         \item {Touch/Voice/Camera-based HCI technologies.}
         \item {3D Animation/Modelling \& Geometrical Computing.}
         \item {Multi-Core CPU/GPU and Cloud computing.}
@@ -31,6 +28,7 @@
         \item {Artificial Intelligence, Robotics, and Cybernetics.}
         \item {Computer Games \& Gamification.}
         \item {Workforce scheduling \& management software.}
+        \item {Network Security \& Configuration \& Administration.}
       \end{cvitems}
 	  \end{multicols}
 	  \vspace{-0.5cm}
