"Minor correction to experience."

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -83,30 +83,30 @@ Adaptive, perfective and corrective software maintenance for an information mana
       \end{cvitems}
     } 
     
-%---------------------------------------------------------
-  \cventry
-    {PhD Researcher for <\href{http://www.fct.pt/index.phtml.en}{Foundation for Science and Technology}>} % Job title
-    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
-    {Covilh\~a, Portugal} % Location
-    {Jan. 2012 - Present} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-      %\item[] {Engineering and design of a novel modular game engine architecture.}
-      \item[] {Implementation and development of novel pathfinders reactive to influence maps.}%a novel pathfinder and of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
-      %\item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
-      %\item[] {Lecturing about achieved results and possible new research trends.}
-      \item[] {Conducting research, writing scientific papers, and lecturing about achieved results and possible new research trends.}
-%        \item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
-%        \item[] {Engineering and design of modular game engines.}
-%        \item[] {Implementation and development of innovative motion planning techniques.}
-%        \item[] {Lecturing about achieved results and possible new research trends.}
-%        \item[] {}
-%        \item[] {\textbf{Notable Accomplishments:}}      
-%        \item[] {Proposal of a novel modular game engine architecture.}
-%        \item[] {Proposal of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
-%        \item[] {Proposal of a novel pathfinder.}
-      \end{cvitems}
-    }  
+%%---------------------------------------------------------
+%  \cventry
+%    {PhD Researcher for <\href{http://www.fct.pt/index.phtml.en}{Foundation for Science and Technology}>} % Job title
+%    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
+%    {Covilh\~a, Portugal} % Location
+%    {Jan. 2012 - Dec. 2016} % Date(s)
+%    {
+%      \begin{cvitems} % Description(s) of tasks/responsibilities
+%      %\item[] {Engineering and design of a novel modular game engine architecture.}
+%      \item[] {Implementation and development of novel pathfinders reactive to influence maps.}%a novel pathfinder and of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
+%      %\item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
+%      %\item[] {Lecturing about achieved results and possible new research trends.}
+%      \item[] {Conducting research, writing scientific papers, and lecturing about achieved results and possible new research trends.}
+%%        \item[] {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
+%%        \item[] {Engineering and design of modular game engines.}
+%%        \item[] {Implementation and development of innovative motion planning techniques.}
+%%        \item[] {Lecturing about achieved results and possible new research trends.}
+%%        \item[] {}
+%%        \item[] {\textbf{Notable Accomplishments:}}      
+%%        \item[] {Proposal of a novel modular game engine architecture.}
+%%        \item[] {Proposal of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
+%%        \item[] {Proposal of a novel pathfinder.}
+%      \end{cvitems}
+%    }  
     
 %---------------------------------------------------------
   \cventry
@@ -223,4 +223,4 @@ Adaptive, perfective and corrective software maintenance for an information mana
 %---------------------------------------------------------   
 \end{cventries}
 
-\vspace{2.0cm}
+\vspace{5.0cm}
